Simplify ports on tsuru.yaml (#2812)
* Simplify ports on tsuru.yaml

* Fix lint

* Expose Target port to let the user aware which port the service is using on their containers

* Add missing field on api.yaml

* Rename fields and add warning for future developers

* Add tests

* Working on integration tests

* Add target_port

* Attempt to use one port

* Attempt to debug multi-ports

* Add target_port with bson property

* Add first test of internal addresses

* Add first test of internal addresses[2]

* Add first test of internal addresses[3]

* debug

* Simplify exposition of TargetPort field

* Use port.TargetPort.IntValue()

* Simplify tests

* Simplify tests[2]
